--- a/app/src/main/res/layout/fragment_blank2.xml
+++ b/app/src/main/res/layout/fragment_blank2.xml
@@ -9,6 +9,6 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="fragment changed" />
+        android:text="basic blank fragment" />
 
 </FrameLayout>
